fix: stack buttons when window is too small

--- a/app/src/renderer/css/Settings.css
+++ b/app/src/renderer/css/Settings.css
@@ -6,3 +6,14 @@
 	align-items: center;
 	margin-bottom: 20px;
 }
+
+@media screen and (max-width: 1250px) {
+    #settings {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+	.classic-button {
+        margin-bottom: 5px;
+    }
+}
